--- a/index.html
+++ b/index.html
@@ -9,13 +9,40 @@
     <script type="text/javascript" src="custom.js"></script>
 </head>
 <body>
+    <div>
+    <p>Temperatur<p>
     <canvas id="graph_1" width="400" height="100"></canvas>
+    </div>
+    <div>
+    <p>Radar<p>
     <canvas id="graph_2" width="400" height="100"></canvas>
+    </div>
+    <div>
+    <p>Leistung<p>
     <canvas id="graph_3" width="400" height="100"></canvas>
+    </div>
+    <div>
+    <p>Dummy<p>
     <canvas id="graph_4" width="400" height="100"></canvas>
+    </div>
+    <div>
+    <p>Dummy<p>
     <canvas id="graph_5" width="400" height="100"></canvas>
+    </div>
+    <div>
+    <p>Dummy<p>
     <canvas id="graph_6" width="400" height="100"></canvas>
+    </div>
+    <div>
+    <p>Dummy<p>
     <canvas id="graph_7" width="400" height="100"></canvas>
+    </div>
+    <div>
+    <p>Dummy<p>
     <canvas id="graph_8" width="400" height="100"></canvas>
+    </div>
+    <div>
+    <p>Dummy<p>
     <canvas id="graph_9" width="400" height="100"></canvas>
+    </div>
 </body>
